--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>myFlix</title>
+    <title>flixOlogy</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+    />
   </head>
   <body>
     <div class="app-container"></div>
