--- a/client/src/index.html
+++ b/client/src/index.html
@@ -6,6 +6,10 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="app-container"></div>
