Almost finished with app. One error with the filter portion of app

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,12 +1,13 @@
 <html>
   <head>
     <title>flixOlogy</title>
+    <!-- <link rel="stylesheet" href="index.scss" /> -->
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap"
       rel="stylesheet"
     />
   </head>
